<resources>
    <string name="app_name">CatsQuiz</string>
    <string name="question_1">1. A cat with standing hair, back and tail arched, spitting and hissing is:</string>
    <string name="answer_1_1">Relaxed</string>
    <string name="answer_1_2">Friendly</string>
    <string name="answer_1_3">Aggressive</string>
    <string name="answer_1_4">Bored</string>
    <string name="question_2">2. What is the average life expectancy of an indoor cat?</string>
    <string name="answer_2_1">3 to 5 years</string>
    <string name="answer_2_2">7 to 10 years</string>
    <string name="answer_2_3">13 to 17 years</string>
    <string name="answer_2_4">17 to 20 years</string>
    <string name="question_3">3. What is the average life expectancy of an outdoor cat?</string>
    <string name="answer_3_1">3 to 5 years</string>
    <string name="answer_3_2">7 to 10 years</string>
    <string name="answer_3_3">12 to 15 years</string>
    <string name="answer_3_4">15 to 20 years</string>
    <string name="question_4">4. Which of the following are cat breeds? Please select all that apply.</string>
    <string name="answer_4_1">Savannah</string>
    <string name="answer_4_2">Persian</string>
    <string name="answer_4_3">Ragdoll</string>
    <string name="answer_4_4">Rottweiler</string>
    <string name="submit">Submit</string>
    <string name="question_5">5. How many hours do cats sleep each day?</string>
    <string name="answer_5_1">1–2 hours</string>
    <string name="answer_5_2">4–8 hours</string>
    <string name="answer_5_3">12–16 hours</string>
    <string name="answer_5_4">20–24 hours</string>
    <string name="question_6">6. What are the most important senses when it comes to cat\'s food? Please select all that apply.</string>
    <string name="answer_6_1">Taste</string>
    <string name="answer_6_2">Hearing</string>
    <string name="answer_6_3">Smell</string>
    <string name="answer_6_4">Touch</string>
    <string name="question_7">7. The low, continuous, murmuring sound that cats make is called:</string>
    <string name="title">CATS QUIZ \nHow much do you know about cats?</string>
    <string name="edit_text_hint_1">Answer</string>
    <string name="reset">Reset</string>
    <string name="your_score_message">"Your score is "</string>
    <string name="score_0_3_message">". You completely failed this quiz!"</string>
    <string name="score_4_6_message">". You can do better. Keep trying!"</string>
    <string name="score_7_9_message">". You\'re almost a cats\'expert."</string>
    <string name="score_10_message">". Purr-fect! You are a cats expert."</string>
    <string name="notification_message">Please answer all the questions.</string>
    <string name="cat_hiss_256">cat_hiss_256</string>
    <string name="cat_lady_256">cat_lady_256</string>
    <string name="cat_sleep_256">cat_sleep_256</string>
    <string name="cat_food_256">cat_food_256</string>
    <string name="cat_purr_256">cat_purr_256</string>
    <string name="cat_pirate_256">cat_pirate_256</string>
    <string name="cat_paper_256">cat_paper_256</string>
    <string name="ikonka">Icons credit http://iconka.com</string>
</resources>
